--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -135,3 +135,12 @@ table {
 * {
   box-sizing: border-box; /* 모든 엘리먼트에 적용 */
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
